Actions
Bug #9257
closedhvm drivers don't need to anounce failure to report version
Start date:
2018-03-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Mar 10 03:52:56 rigel xpv: [ID 739648 kern.warning] WARNING: xpv: couldn't write version Mar 10 03:52:56 rigel xpvd: [ID 493969 kern.warning] WARNING: xpvd: couldn't write version Mar 10 03:52:56 rigel xdf: [ID 735456 kern.warning] WARNING: xdf: couldn't write version Mar 10 03:52:57 rigel xnf: [ID 735536 kern.warning] WARNING: xnf: couldn't write version
The version reporting to generic Xen dom0 doesn't make much sense given that it uses our device naming (e.g. guest/xdf
), but as it's still possible that dom0 could be solaris-based, just silence it for now.
Updated by Yuri Pankov about 4 years ago
- Status changed from In Progress to Pending RTI
- % Done changed from 50 to 90
Updated by Electric Monk about 4 years ago
- Status changed from Pending RTI to Closed
- % Done changed from 90 to 100
git commit 66f654faf94d77a6760e083cb715592f4a408046
commit 66f654faf94d77a6760e083cb715592f4a408046 Author: Yuri Pankov <yuri.pankov@nexenta.com> Date: 2018-05-01T14:39:33.000Z 9257 hvm drivers don't need to anounce failure to report version Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions