usr/src/uts/common/xen/io/xpvd.c
@@ -287,12 +287,9 @@ xpvd_attach(dev_info_t *devi, ddi_attach_cmd_t cmd)
 #ifdef XPV_HVM_DRIVER
 	(void) ddi_prop_update_int(DDI_DEV_T_NONE, devi, DDI_NO_AUTODETACH, 1);
 
-	/*
-	 * Report our version to dom0.
-	 */
-	if (xenbus_printf(XBT_NULL, "guest/xpvd", "version", "%d",
-	    HVMPV_XPVD_VERS))
-		cmn_err(CE_WARN, "xpvd: couldn't write version\n");
+	/* Report our version to dom0 */
+	(void) xenbus_printf(XBT_NULL, "guest/xpvd", "version", "%d",
+	    HVMPV_XPVD_VERS);
 #endif /* XPV_HVM_DRIVER */
 
 	/* watch both frontend and backend for new devices */
